test/files/neg/t7669.check
t7669.scala:10: warning: match may not be exhaustive.
It would fail on the following input: NotHandled(_)
  def exhausto(expr: Expr): Unit = expr match {
                                   ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
